--- a/src/main/resources/view/PersonOverview.fxml
+++ b/src/main/resources/view/PersonOverview.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PersonOverviewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PersonOverviewController">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="100.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -53,11 +53,11 @@
                         <Label fx:id="birthdayLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                      </children>
                   </GridPane>
-                  <HBox alignment="BOTTOM_RIGHT" layoutX="275.0" layoutY="259.0">
+                  <HBox alignment="BOTTOM_RIGHT" layoutX="250.0" layoutY="259.0" spacing="5.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
                      <children>
-                        <Button layoutX="183.0" layoutY="259.0" mnemonicParsing="false" text="New" />
-                        <Button layoutX="247.0" layoutY="259.0" mnemonicParsing="false" text="Edit" />
-                        <Button layoutX="310.0" layoutY="259.0" mnemonicParsing="false" text="Delete" />
+                        <Button layoutX="183.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleNewPerson" prefHeight="25.0" prefWidth="60.0" text="New" />
+                        <Button layoutX="247.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleEditPerson" prefHeight="25.0" prefWidth="60.0" text="Edit" />
+                        <Button layoutX="310.0" layoutY="259.0" mnemonicParsing="false" onAction="#handleDeletePerson" prefHeight="25.0" prefWidth="60.0" text="Delete" />
                      </children>
                   </HBox>
                </children>
